# pontia-automl

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_eda.ipynb
scripts/: eval.py  train.py
src/: config.py  evaluation.py  load_data.py  model_registry.py  preprocessing.py
src/pontia_automl/: config.py  evaluation.py  load_data.py  model_registry.py  preprocessing.py
